--- a/css/btw.css
+++ b/css/btw.css
@@ -17,7 +17,7 @@ body {
 	background: #999;
 	margin-top: 25px;
 	width: 320px;
-	height: inherit;
+	height: 480px;
 	margin-right: auto;
 	margin-left: auto;
 }
