--- a/css/btw.css
+++ b/css/btw.css
@@ -93,6 +93,11 @@ form#noteForm {
 	float:left;
 }
 
+#noteForm submit{
+	background-color:#000;
+	color:#ff0000;
+	}
+
 #noteForm fieldset {
 	border: 2px solid #ff0000;
 	padding: 0 15px 15px;
@@ -348,7 +353,6 @@ a.knop:hover, a.knop:active {
 	padding: 0;
 }
 
-
 #noteForm input[type=submit], #noteForm button
 {
 	clear: both;
@@ -390,5 +394,4 @@ a.knop:hover, a.knop:active {
 	font-size: 12px;
 	font-weight: bold;
 }
-
 
